--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.1",
     "reactstrap": "^9.0.2",
     "sass": "^1.49.7",
     "web-vitals": "^2.1.4"
